--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
 <body>
 
   <!-- Write your HTML here -->
-  
+  <table>
+    <tr>
+      <th>City
+      </th>
+      <th>State
+      </th>
+      <th>2017 estimate
+      </th>
+    </tr>
+    <tr>
+    </tr>
+    <tr>
+    </tr>
+    <tr>
+    </tr>
+    <tr>
+    </tr>
+  </table>
 </body>
 </html>
