Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
       </td>
       <td>8,622,698
       </td>
-    <tr>
+    <tr>  
+      <td>Los Angeles
+      </td>
+      <td>California
+      </td>
+      <td>8,622,698
+      </td>
     </tr>
     <tr>
     </tr>
