Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
       </td>
     </tr>
     <tr>
+      <td>Chicago
+      </td>
+      <td>Illinois
+      </td>
+      <td>2,716,450
+      </td>
     </tr>
     <tr>
     </tr>
