--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
       <td>2,716,450
       </td>
     </tr>
+    <td>Houston
+    </td>
+    <td>Texas
+    </td>
+    <td>2,312,717
+    </td>
     <tr>
     </tr>
     <tr>
