--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <!-- Write your HTML here -->
   <table>
     <tr>
-      <th>City
-      </th>
+      <th>City</th>
       <th>State
       </th>
       <th>2017 estimate
