--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
   <table>
     <tr>
       <th>City</th>
-      <th>State
-      </th>
-      <th>2017 estimate
-      </th>
+      <th>State</th>
+      <th>2017 estimate</th>
     </tr>
       <td>New York
       </td>
