--- a/index.html
+++ b/index.html
@@ -16,12 +16,9 @@
       <th>2017 estimate</th>
     </tr>
     <tr>
-      <td>New York
-      </td>
-      <td>New York
-      </td>
-      <td>8,622,698
-      </td>
+      <td>New York      </td>
+      <td>New York      </td>
+      <td>8,622,698      </td>
     </tr>
     <tr>
       <td>Los Angeles
